# jackfruit

./: .env.example  .gitignore  README.md  docker-compose.yml
.claude/: CLAUDE.md
.github/: dependabot.yml  (+1 more)
pipeline-python/: .gitignore  Dockerfile  Makefile  README.md  dagster.yaml  pyproject.toml
pipeline-python/.claude/: CLAUDE.md
pipeline-python/.tmp_dagster_home_8xzuycau/history/: runs.db
pipeline-python/.tmp_dagster_home_8xzuycau/history/runs/: .db  78b1c505-b16f-426d-9743-370f71386ec6.db  926a92b7-fbc8-4411-b2ad-d393a90fbb28.db  93eb86d5-a681-4787-8207-52371f8ab29c.db  index.db
pipeline-python/.tmp_dagster_home_8xzuycau/schedules/: schedules.db
pipeline-python/.tmp_dagster_home_8xzuycau/storage/78b1c505-b16f-426d-9743-370f71386ec6/compute_logs/: pmmiivzu.err
pipeline-python/.tmp_dagster_home_8xzuycau/storage/926a92b7-fbc8-4411-b2ad-d393a90fbb28/compute_logs/: qyxafvcz.err
pipeline-python/.tmp_dagster_home_8xzuycau/storage/93eb86d5-a681-4787-8207-52371f8ab29c/compute_logs/: ftklctqk.err
pipeline-python/migrations/: init.sql
pipeline-python/migrations/clickhouse/: init.sql
pipeline-python/migrations/postgres/: init.sql
pipeline-python/scripts/: grib_sanity_check.py
pipeline-python/src/pipeline_python/: grib2io_patch.py
pipeline-python/src/pipeline_python/defs/: __init__.py  assets.py  models.py  partitions.py  resources.py  schedules.py
pipeline-python/src/pipeline_python/grib2/: __init__.py  pdt40.py  reader.py  shortnames.py
pipeline-python/src/pipeline_python/ingestion/: __init__.py  cds_client.py  ecmwf_client.py
pipeline-python/src/pipeline_python/storage/: __init__.py  clickhouse.py  clickhouse_grid_store.py  grid_store.py  object_store.py
pipeline-python/tests/: .env.test  test_grib2io_patch.py  test_grib_sanity_check.py  test_ingest_cams_data.py  test_ingestion_assets.py  test_resources.py  test_schedules.py  test_transformation_assets.py
pipeline-python/tests/fixtures/: 019cf6d7-02a0-745b-ac05-e1201d8f8a72.grib
pipeline-python/tests/integration/: conftest.py  test_transform_cams.py  test_transform_ecmwf.py
pipeline-python/tests/test_grib2/: __init__.py  test_pdt40.py  test_shortnames.py
pipeline-python/tests/test_storage/: test_grid_storage.py
pipeline-python/tests/unit/: conftest.py  test_grib_sanity_check.py  test_ingestion_assets.py  test_optimize_assets.py  test_resources.py  test_schedules.py  test_transform_assets.py  test_transformation_assets.py
pipeline-python/tests/unit/test_grib2/: test_cams_adapter.py  test_ecmwf_adapter.py
pipeline-python/tests/unit/test_ingestion/: test_cds_client.py  test_ecmwf_client.py
pipeline-python/tests/unit/test_storage/: test_grid_storage.py  test_object_store.py
(+77 files in other folders)
