[project]
name = "pipeline_python"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "boto3>=1.35.0",
    "boto3-stubs~=1.42.30",
    "dagster==1.12.7",
    "dagster-docker>=0.26.0",
    "grib2io==2.6.0",
]
[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }
[tool.dg]
directory_type = "project"
[tool.dg.project]
root_module = "pipeline_python"
registry_modules = [
    "pipeline_python.components.*",
]
