[project]
name = "pipeline_python"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "boto3~=1.42",
    "boto3-stubs~=1.42",
    "clickhouse-connect>=0.11.0",
    "dagster~=1.12",
    "dagster-docker~=0.28",
    "dagster-postgres~=0.28",
    # NOTE: grib2io 2.7.0 has a circular import bug, pinned to 2.6.0
    "grib2io==2.6.0",
    "psycopg[binary]~=3.2",
]
[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }
[tool.dg]
directory_type = "project"
[tool.dg.project]
root_module = "pipeline_python"
registry_modules = [
    "pipeline_python.components.*",
]
