[project]
name = "pipeline_python"
requires-python = ">=3.14,<3.15"
version = "0.1.0"
dependencies = [
    "boto3~=1.42",
    "boto3-stubs~=1.42",
    "cdsapi>=0.7.7",
    "clickhouse-connect>=0.11.0",
    "dagster~=1.12",
    "dagster-k8s~=0.28",
    "dagster-postgres~=0.28",
    "dagster-webserver~=1.12",
    "ecmwf-opendata>=0.3.26",
    "psycopg[binary]~=3.2",
    "pygrib>=2.1.8",
]
[dependency-groups]
dev = [
    "dagster-dg-cli",
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "python-dotenv>=1.0.0",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }
[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: tests with no external dependencies",
    "integration: requires running Docker infrastructure (MinIO, Postgres, ClickHouse)",
]

[tool.dg]
directory_type = "project"
[tool.dg.project]
root_module = "pipeline_python"
registry_modules = [
    "pipeline_python.components.*",
]
